Actions
Bug #12628
closedchicago: smatch and NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
/code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../../sun4u/chicago/io/fpc/fpc-impl-4u.c:192 fpc_platform_node_init() warn: variable dereferenced before check 'platform_specific_data' (see line 162) ../../../sun4/io/fpc/fpc-kstats.c: In function 'fpc_create_picN_kstat': ../../../sun4/io/fpc/fpc-kstats.c:411: error: passing argument 7 of 'kstat_create' makes integer from pointer without a cast ../../../common/sys/kstat.h:793: note: expected 'uchar_t' but argument is of type 'void *' ../../../sun4u/chicago/os/chicago.c: In function 'startup_platform': ../../../sun4u/chicago/os/chicago.c:56: error: incompatible type for argument 3 of 'mutex_init' ../../../common/sys/mutex.h:88: note: expected 'kmutex_type_t' but argument is of type 'void *'
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c5fab18ea427d8368421383466fe138ed00ed68d
commit c5fab18ea427d8368421383466fe138ed00ed68d Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:39:43.000Z 12628 chicago: smatch and NULL pointer errors Reviewed by: C Fraire <cfraire@me.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions